--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "nuxt": "^3.11.2",
     "sass": "^1.76.0",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-carousel": "^0.3.3"
   },
   "devDependencies": {
     "@nuxt/eslint": "^0.3.10",
